# CORAL

./: .readthedocs.yaml  LICENSE  README.md  coral_tutorial.ipynb  environment.yml  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
coral/: README.md  __init__.py  inference.py
coral/model/: coral_main.py  model_core.py
coral/model/.ipynb_checkpoints/: __init__-checkpoint.py  model_core-checkpoint.py
coral/trainer/: train.py
coral/trainer/.ipynb_checkpoints/: train-checkpoint.py
coral/utils/: preprocessing.py  visualization.py
coral/utils/.ipynb_checkpoints/: __init__-checkpoint.py
docs/: conf.py  requirements.txt
docs/.ipynb_checkpoints/: requirements-checkpoint.txt
docs/_build/doctrees/: installation.doctree
docs/_build/doctrees/api/: inference.doctree  preprocessing.doctree  trainer.doctree  visualization.doctree
docs/_build/doctrees/tutorials/: align_slides_tutorial.doctree  coral_tutorial.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: index.doctree
docs/_build/html/.doctrees/api/: index.doctree  model.doctree  (+1 more)
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt
docs/_build/html/api/: index.html  inference.html  model.html  preprocessing.html  trainer.html  visualization.html
docs/_build/html/tutorials/: align_slides_tutorial.html  align_slides_tutorial.ipynb  coral_tutorial.html  index.html
docs/api/: index.rst  inference.rst  model.rst  visualization.rst
docs/tutorials/: index.rst
(+10 files in other folders)
