[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CORAL"
version = "0.0.1"
dependencies = [
]
requires-python = ">= 3.8"
description = "spatial multiomics integrative toolbox."
readme = "README.md"
license = {file="LICENSE"}
authors = [{name = "Siyu He", email = "siyuhe@stanford.edu"}]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]
docs = [
  "sphinx>=7.0",
  "furo",
  "nbsphinx",
  "ipykernel",
  "sphinx-copybutton",
]

[project.scripts]
spam-cli = "spam:main_cli"

[project.gui-scripts]
spam-gui = "spam:main_gui"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"
